Fix app height on mobile

--- a/styles.css
+++ b/styles.css
@@ -141,8 +141,18 @@ input {
 @media only screen
 and (max-device-width : 480px) {
 
+  body {
+    height: 100vh;
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: rgb(228, 221, 128);
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+  }
+
   .app {
-    height: 100%;
+    height: 80%;
     width: 100%;
     background-color: rgb(228, 221, 128);
     font-size: xx-large;
@@ -194,6 +204,14 @@ and (max-device-width : 480px) {
     font-size: xx-large;
     border-radius: 1rem;
   }
+
+  #add-task-button {
+    color: rgb(70, 167, 75);
+  }
+  #delete-list-button {
+    color: rgb(66, 66, 66);
+  }
+  
 
   .input-and-control-container {
     grid-area: appInputAndControlls;
